@@ -47,7 +47,7 @@ AM_INIT_AUTOMAKE([dist-bzip2])
 
 
 # Checks for header files.
-AC_CHECK_HEADERS([sys/socket.h linux/if_tun.h])
+AC_CHECK_HEADERS([sys/socket.h linux/if_tun.h sys/uio.h])
 AC_CHECK_HEADERS([netinet6/in6_var.h], [], [],
 [#include <sys/types.h>
 #include <sys/socket.h>
